@@ -21,6 +21,7 @@
 //
 // ParticleFireworks
 //
+#pragma mark Fireworks
 @implementation ParticleFireworks
 -(id) init
 {
@@ -84,8 +85,7 @@
 	size = 8.0f;
 	sizeVar = 2.0f;
 
-	texture = [[TextureMgr sharedTextureMgr] addImage: @"fire.pvr"];
-	[texture retain];
+	self.texture = [[TextureMgr sharedTextureMgr] addImage: @"stars.png"];
 
 	// additive
 	blendAdditive = NO;
@@ -97,6 +97,7 @@
 //
 // ParticleFire
 //
+#pragma mark Fire
 @implementation ParticleFire
 -(id) init
 {
@@ -125,7 +126,7 @@
 	
 	// emitter position
 	position.x = 160;
-	position.y = 60;
+	position.y = 100;
 	posVar.x = 40;
 	posVar.y = 20;
 	
@@ -162,8 +163,7 @@
 	endColorVar.b = 0.0f;
 	endColorVar.a = 0.0f;
 	
-	texture = [[TextureMgr sharedTextureMgr] addImage: @"fire.pvr"];
-	[texture retain];
+	self.texture = [[TextureMgr sharedTextureMgr] addImage: @"fire.pvr"];
 	
 	// additive
 	blendAdditive = YES;
@@ -175,6 +175,7 @@
 //
 // ParticleSun
 //
+#pragma mark Sun
 @implementation ParticleSun
 -(id) init
 {
@@ -243,8 +244,7 @@
 	endColorVar.b = 0.0f;
 	endColorVar.a = 0.0f;
 	
-	texture = [[TextureMgr sharedTextureMgr] addImage: @"fire.pvr"];
-	[texture retain];
+	self.texture = [[TextureMgr sharedTextureMgr] addImage: @"fire.pvr"];
 	
 	return self;
 }
@@ -253,6 +253,7 @@
 //
 // ParticleGalaxy
 //
+#pragma mark Galaxy
 @implementation ParticleGalaxy
 -(id) init
 {
@@ -322,8 +323,7 @@
 	endColorVar.b = 0.0f;
 	endColorVar.a = 0.0f;
 	
-	texture = [[TextureMgr sharedTextureMgr] addImage: @"fire.pvr"];
-	[texture retain];
+	self.texture = [[TextureMgr sharedTextureMgr] addImage: @"fire.pvr"];
 
 	// additive
 	blendAdditive = YES;
@@ -335,6 +335,7 @@
 //
 // ParticleFlower
 //
+#pragma mark Flower
 @implementation ParticleFlower
 -(id) init
 {
@@ -404,8 +405,7 @@
 	endColorVar.b = 0.0f;
 	endColorVar.a = 0.0f;
 	
-	texture = [[TextureMgr sharedTextureMgr] addImage: @"fire.pvr"];
-	[texture retain];
+	self.texture = [[TextureMgr sharedTextureMgr] addImage: @"stars.png"];
 
 	// additive
 	blendAdditive = YES;
@@ -417,6 +417,7 @@
 //
 // ParticleMeteor
 //
+#pragma mark Meteor
 @implementation ParticleMeteor
 -(id) init
 {
@@ -486,8 +487,7 @@
 	endColorVar.b = 0.0f;
 	endColorVar.a = 0.0f;
 	
-	texture = [[TextureMgr sharedTextureMgr] addImage: @"fire.pvr"];
-	[texture retain];
+	self.texture = [[TextureMgr sharedTextureMgr] addImage: @"fire.pvr"];
 	
 	// additive
 	blendAdditive = YES;
@@ -499,6 +499,7 @@
 //
 // ParticleSpiral
 //
+#pragma mark Spiral
 @implementation ParticleSpiral
 -(id) init
 {
@@ -568,8 +569,7 @@
 	endColorVar.b = 0.5f;
 	endColorVar.a = 0.0f;
 	
-	texture = [[TextureMgr sharedTextureMgr] addImage: @"fire.pvr"];
-	[texture retain];
+	self.texture = [[TextureMgr sharedTextureMgr] addImage: @"fire.pvr"];
 
 	// additive
 	blendAdditive = NO;
@@ -581,6 +581,7 @@
 //
 // ParticleExplosion
 //
+#pragma mark Explosion
 @implementation ParticleExplosion
 -(id) init
 {
@@ -650,11 +651,10 @@
 	endColorVar.b = 0.5f;
 	endColorVar.a = 0.0f;
 	
-	texture = [[TextureMgr sharedTextureMgr] addImage: @"fire.pvr"];
-	[texture retain];
+	self.texture = [[TextureMgr sharedTextureMgr] addImage: @"stars.png"];
 
 	// additive
-	blendAdditive = NO;
+	blendAdditive = YES;
 	
 	return self;
 }
@@ -663,6 +663,7 @@
 //
 // ParticleSmoke
 //
+#pragma mark Smoke
 @implementation ParticleSmoke
 -(id) init
 {
@@ -691,7 +692,7 @@
 	
 	// emitter position
 	position.x = 160;
-	position.y = 0;
+	position.y = 100;
 	posVar.x = 20;
 	posVar.y = 0;
 	
@@ -728,8 +729,7 @@
 	endColorVar.b = 0.0f;
 	endColorVar.a = 0.0f;
 	
-	texture = [[TextureMgr sharedTextureMgr] addImage: @"fire.pvr"];
-	[texture retain];
+	self.texture = [[TextureMgr sharedTextureMgr] addImage: @"fire.pvr"];
 	
 	// additive
 	blendAdditive = NO;
@@ -738,6 +738,7 @@
 }
 @end
 
+#pragma mark Snow
 @implementation ParticleSnow
 -(id) init
 {
@@ -774,12 +775,12 @@
 	
 	// emitter position
 	position.x = [[Director sharedDirector] winSize].width / 2;
-	position.y = [[Director sharedDirector] winSize].height + 10;
+	position.y = [[Director sharedDirector] winSize].height - 100;
 	posVar.x = [[Director sharedDirector] winSize].width / 2;
 	posVar.y = 0;
 	
 	// life of particles
-	life = 45;
+	life = 25;
 	lifeVar = 15;
 	
 	// size, in pixels
@@ -790,26 +791,25 @@
 	emissionRate = 10;
 	
 	// color of particles
-	startColor.r = 1.0f;
-	startColor.g = 1.0f;
-	startColor.b = 1.0f;
+	startColor.r = 0.9f;
+	startColor.g = 0.9f;
+	startColor.b = 0.9f;
 	startColor.a = 1.0f;
 	startColorVar.r = 0.0f;
 	startColorVar.g = 0.0f;
-	startColorVar.b = 0.0f;
+	startColorVar.b = 0.1f;
 	startColorVar.a = 0.0f;
-	endColor.r = 1.0f;
-	endColor.g = 1.0f;
-	endColor.b = 1.0f;
+	endColor.r = 0.9f;
+	endColor.g = 0.9f;
+	endColor.b = 0.9f;
 	endColor.a = 0.0f;
 	endColorVar.r = 0.0f;
 	endColorVar.g = 0.0f;
-	endColorVar.b = 0.0f;
-	endColorVar.a = 0.0f;
+	endColorVar.b = 0.1f;
+	endColorVar.a = 0.5f;
 	
-	texture = [[TextureMgr sharedTextureMgr] addImage: @"fire.pvr"];
-	[texture retain];
-	
+	self.texture = [[TextureMgr sharedTextureMgr] addImage: @"snow.png"];
+
 	// additive
 	blendAdditive = NO;
 	
@@ -817,6 +817,7 @@
 }
 @end
 
+#pragma mark Rain
 @implementation ParticleRain
 -(id) init
 {
@@ -853,7 +854,7 @@
 	
 	// emitter position
 	position.x = [[Director sharedDirector] winSize].width / 2;
-	position.y = [[Director sharedDirector] winSize].height;
+	position.y = [[Director sharedDirector] winSize].height - 100;
 	posVar.x = [[Director sharedDirector] winSize].width / 2;
 	posVar.y = 0;
 	
@@ -886,8 +887,7 @@
 	endColorVar.b = 0.0f;
 	endColorVar.a = 0.0f;
 	
-	texture = [[TextureMgr sharedTextureMgr] addImage: @"fire.pvr"];
-	[texture retain];
+	self.texture = [[TextureMgr sharedTextureMgr] addImage: @"fire.pvr"];
 	
 	// additive
 	blendAdditive = NO;
